--- a/warehouses/templates/warehouses/index.html
+++ b/warehouses/templates/warehouses/index.html
@@ -1,10 +1,7 @@
-{% extends 'layout.html' %}
+{% extends 'warehouses/layout.html' %}
 
 {% load i18n %}
-{% load menu %}
 {% load breadcrumbs %}
-
-{% block title %}{% trans 'Warehouses' %}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Warehouses' %}
@@ -12,18 +9,10 @@
 {% endblock %}
 
 {% block content %}
-    <ul class="menu">
-        {% get_menu 'warehouses' as menu_bar %}
-        {% for m in menu_bar %}
-        {{ m }}
-        {% endfor %}
-    </ul>
-    {% block current_page %}
     <h3>{% trans 'Warehouses' %}</h3>
     {% include 'search_box.html' %}
     {{ warehouses.as_table }}
     <ul class="actions">
         <li><a class="add" href="/warehouses/add/">{% trans 'Add' %}</a></li>
     </ul>
-    {% endblock %}
 {% endblock %}
