--- a/warehouses/templates/warehouses/add.html
+++ b/warehouses/templates/warehouses/add.html
@@ -1,9 +1,7 @@
-{% extends 'layout.html' %}
+{% extends 'warehouses/layout.html' %}
 
 {% load i18n %}
 {% load breadcrumbs %}
-
-{% block title %}{% trans 'Warehouses' %}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Warehouses' '/warehouses/' %}
@@ -13,13 +11,10 @@
 
 {% block content %}
     <h3>{% trans 'Add' %}</h3>
-    <form action="/warehouses/add/" method="post">
+    <form action="." method="post">
         {{ form.as_p }}
         <div class="actions">
             <input class="save" type="submit" value="{% trans 'Save' %}" />
         </div>
     </form>
-    <ul class="actions">
-        <li><a class="warehouses" href="/warehouses/">{% trans 'Warehouses' %}</a></li>
-    </ul>
 {% endblock %}
