Improvements to the usability of "products" package.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@133 71535020-02ba-11df-897e-95fb7fca2173

--- a/products/templates/products/add.html
+++ b/products/templates/products/add.html
@@ -1,9 +1,7 @@
-{% extends 'layout.html' %}
+{% extends 'products/layout.html' %}
 
 {% load i18n %}
 {% load breadcrumbs %}
-
-{% block title %}{% trans 'Products' %}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Products' '/products/' %}
@@ -29,7 +27,4 @@
             <input class="save" type="submit" value="{% trans 'Save' %}" />
         </div>
     </form>
-    <ul class="actions">
-        <li><a class="products" href="/products/">{% trans 'Products' %}</a></li>
-    </ul>
 {% endblock %}
