--- a/products/templates/products/uoms/categories/view.html
+++ b/products/templates/products/uoms/categories/view.html
@@ -1,9 +1,7 @@
-{% extends 'layout.html' %}
+{% extends 'products/layout.html' %}
 
 {% load i18n %}
 {% load breadcrumbs %}
-
-{% block title %}{% trans 'Products' %}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Products' '/products/' %}
@@ -14,37 +12,16 @@
 {% endblock %}
 
 {% block content %}
+    <ul class="menu">
+        <li class="view"><a href="{{ category.get_absolute_url }}">{% trans 'Details' %}</a></li>
+        <li class="uoms"><a href="{{ category.get_uoms_url }}">{% trans 'UOMs' %}</a></li>
+    </ul>
+    {% block page %}
     <h3>{% trans 'Details' %}</h3>
     {{ details.as_dl }}
-    <h3>{% trans 'UOMs' %}</h3>
-    {% include 'search_box.html' %}
-    {% if category.uom_set.all %}
-    <table>
-        <thead>
-            <td>{% trans 'Name' %}</td>
-            <td>{% trans 'Initials' %}</td>
-            <td>{% trans 'Actions' %}</td>
-        </thead>
-        {% for uom in category.uom_set.all %}
-        <tr>
-            <td>{{ uom.name }}</td>
-            <td>{{ uom.initials }}</td>
-            <td>
-                <ul class="actions">
-                    <li><a class="view" href="/products/uoms/view/{{ uom.id }}/">{% trans 'View' %}</a></li>
-                    <li><a class="edit" href="/products/uoms/edit/{{ uom.id }}/">{% trans 'Edit' %}</a></li>
-                    <li><a class="delete" href="/products/uoms/delete/{{ uom.id }}/">{% trans 'Delete' %}</a></li>
-                </ul>
-            </td>
-        </tr>
-        {% endfor %}
-    </table>
-    {% else %}
-    <p class="disabled">{% trans 'empty' %}.</p>
-    {% endif %}
     <ul class="actions">
-        <li><a class="edit" href="/products/uoms/categories/edit/{{ category.id }}/">{% trans 'Edit' %}</a></li>
-        <li><a class="delete" href="/products/uoms/categories/delete/{{ category.id }}/">{% trans 'Delete' %}</a></li>
-        <li><a class="categories" href="/products/uoms/categories/">{% trans 'Categories' %}</a></li>
+        <li><a class="edit" href="{{ category.get_edit_url }}">{% trans 'Edit' %}</a></li>
+        <li><a class="delete" href="{{ category.get_delete_url }}">{% trans 'Delete' %}</a></li>
     </ul>
+    {% endblock %}
 {% endblock %}
