--- a/products/templates/products/delete.html
+++ b/products/templates/products/delete.html
@@ -1,9 +1,7 @@
-{% extends 'layout.html' %}
+{% extends 'products/layout.html' %}
 
 {% load i18n %}
 {% load breadcrumbs %}
-
-{% block title %}{% trans 'Products' %}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Products' '/products/' %}
@@ -13,7 +11,7 @@
 
 {% block content %}
     <h3>{% trans 'Delete' %}</h3>
-    <form action="/products/delete/{{ product.id }}/" method="post">
+    <form action="." method="post">
         <div class="message">
             <p class="warning">{% trans 'Are you sure you want to delete this product and all its related informations?' %}</p>
             <div class="actions">
@@ -23,8 +21,7 @@
         </div>
     </form>
     <ul class="actions">
-        <li><a class="view" href="/products/view/{{ product.id }}">{% trans 'View' %}</a></li>
-        <li><a class="delete" href="/products/edit/{{ product.id }}">{% trans 'Edit' %}</a></li>
-        <li><a class="products" href="/products/">{% trans 'Products' %}</a></li>
+        <li><a class="view" href="{{ product.get_absolute_url }}">{% trans 'View' %}</a></li>
+        <li><a class="edit" href="{{ product.get_edit_url }}">{% trans 'Edit' %}</a></li>
     </ul>
 {% endblock %}
