--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -1,10 +1,8 @@
-{% extends 'layout.html' %}
+{% extends 'products/layout.html' %}
 
 {% load i18n %}
 {% load menu %}
 {% load breadcrumbs %}
-
-{% block title %}{% trans 'Products' %}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Products' %}
@@ -12,18 +10,10 @@
 {% endblock %}
 
 {% block content %}
-    <ul class="menu">
-        {% get_menu 'products' as menu_bar %}
-        {% for m in menu_bar %}
-        {{ m }}
-        {% endfor %}
-    </ul>
-    {% block current_page %}
     <h3>{% trans 'Products' %}</h3>
     {% include 'search_box.html' %}
     {{ products.as_table }}
     <ul class="actions">
         <li><a class="add" href="/products/add/">{% trans 'Add' %}</a></li>
     </ul>
-    {% endblock %}
 {% endblock %}
