--- a/products/templates/products/uoms/add.html
+++ b/products/templates/products/uoms/add.html
@@ -1,9 +1,7 @@
-{% extends 'layout.html' %}
+{% extends 'products/layout.html' %}
 
 {% load i18n %}
 {% load breadcrumbs %}
-
-{% block title %}{% trans 'Products' %}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Products' '/products/' %}
@@ -14,13 +12,10 @@
 
 {% block content %}
     <h3>{% trans 'Add' %}</h3>
-    <form action="/products/uoms/add/" method="post">
+    <form action="." method="post">
         {{ form.as_p }}
         <div class="actions">
             <input class="save" type="submit" value="{% trans 'Save' %}" />
         </div>
     </form>
-    <ul class="actions">
-        <li><a class="uoms" href="/products/uoms/">{% trans 'UOMs' %}</a></li>
-    </ul>
 {% endblock %}
