--- a/products/templates/products/uoms/categories/edit.html
+++ b/products/templates/products/uoms/categories/edit.html
@@ -1,9 +1,7 @@
-{% extends 'layout.html' %}
+{% extends 'products/layout.html' %}
 
 {% load i18n %}
 {% load breadcrumbs %}
-
-{% block title %}{% trans 'Products' %}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Products' '/products/' %}
@@ -15,15 +13,14 @@
 
 {% block content %}
     <h3>{% trans 'Edit' %}</h3>
-    <form action="/products/uoms/categories/edit/{{ category.id }}/" method="post">
+    <form action="." method="post">
         {{ form.as_p }}
         <div class="actions">
             <input class="save" type="submit" value="{% trans 'Save' %}" />
         </div>
     </form>
     <ul class="actions">
-        <li><a class="view" href="/products/uoms/categories/view/{{ category.id }}">{% trans 'View' %}</a></li>
-        <li><a class="delete" href="/products/uoms/categories/delete/{{ category.id }}">{% trans 'Delete' %}</a></li>
-        <li><a class="categories" href="/products/uoms/categories/">{% trans 'Categories' %}</a></li>
+        <li><a class="view" href="{{ category.get_absolute_url }}">{% trans 'View' %}</a></li>
+        <li><a class="delete" href="{{ category.get_delete_url }}">{% trans 'Delete' %}</a></li>
     </ul>
 {% endblock %}
