--- a/products/templates/products/uoms/delete.html
+++ b/products/templates/products/uoms/delete.html
@@ -1,9 +1,7 @@
-{% extends 'layout.html' %}
+{% extends 'products/layout.html' %}
 
 {% load i18n %}
 {% load breadcrumbs %}
-
-{% block title %}{% trans 'Products' %}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Products' '/products/' %}
@@ -14,7 +12,7 @@
 
 {% block content %}
     <h3>{% trans 'Delete' %}</h3>
-    <form action="/products/uoms/delete/{{ uom.id }}/" method="post">
+    <form action="." method="post">
         <div class="message">
             <p class="warning">{% trans 'Are you sure you want to delete this uom and all its related informations?' %}</p>
             <div class="actions">
@@ -24,8 +22,7 @@
         </div>
     </form>
     <ul class="actions">
-        <li><a class="view" href="/products/uoms/view/{{ uom.id }}">{% trans 'View' %}</a></li>
-        <li><a class="delete" href="/products/uoms/edit/{{ uom.id }}">{% trans 'Edit' %}</a></li>
-        <li><a class="uoms" href="/products/uoms/">{% trans 'UOMs' %}</a></li>
+        <li><a class="view" href="{{ uom.get_absolute_url }}">{% trans 'View' %}</a></li>
+        <li><a class="delete" href="{{ uom.get_edit_url }}">{% trans 'Edit' %}</a></li>
     </ul>
 {% endblock %}
