- Added search box to missed views. - Fixed a few bugs.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@134 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/templates/accounts/groups.html
+++ b/core/templates/accounts/groups.html
@@ -12,5 +12,6 @@
 
 {% block page %}
     <h3>{% trans 'Groups' %}</h3>
+    {% include 'search_box.html' %}
     {{ groups.as_table }}
 {% endblock %}
