--- a/core/templates/accounts/groups/permissions.html
+++ b/core/templates/accounts/groups/permissions.html
@@ -5,7 +5,7 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Accounts' '/accounts/' %}
-    {% add_crumb 'Groups' '/groups/' %}
+    {% add_crumb 'Groups' '/accounts/groups/' %}
     {% add_crumb group group.get_absolute_url %}
     {% add_crumb 'Permissions' %}
     <h2>{% render_breadcrumbs %}</h2>
@@ -13,5 +13,6 @@
 
 {% block page %}
     <h3>{% trans 'Permissions' %}</h3>
+    {% include 'search_box.html' %}
     {{ permissions.as_table }}
 {% endblock %}
