--- a/core/templates/accounts/permissions.html
+++ b/core/templates/accounts/permissions.html
@@ -12,5 +12,6 @@
 
 {% block page %}
     <h3>{% trans 'Permissions' %}</h3>
+    {% include 'search_box.html' %}
     {{ permissions.as_table }}
 {% endblock %}
