--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -96,7 +96,7 @@ MIDDLEWARE_CLASSES = (
     'django.contrib.sessions.middleware.SessionMiddleware',
     'django.contrib.auth.middleware.AuthenticationMiddleware',
     'prometeo.core.middleware.RequireLoginMiddleware',
-    #'prometeo.core.middleware.RequirePermissionMiddleware'
+    'prometeo.core.middleware.RequirePermissionMiddleware'
 )
 
 # Roor for URL dispatcher.
@@ -122,6 +122,18 @@ LOGIN_REQUIRED_URLS = (
 LOGIN_REQUIRED_URLS_EXCEPTIONS = (
     r'/media/(.*)$',
     r'/accounts/login/$',
+)
+
+# Permissions options.
+RESTRICTED_URLS = (
+    r'/(.*)$',
+)
+
+RESTRICTED_URLS_EXCEPTIONS = (
+    r'/media/(.*)$',
+    r'/accounts/login/$', 
+    r'/accounts/logout/$',
+    r'/$',
 )
 
 # User profile model.
