--- a/core/templates/layout.html
+++ b/core/templates/layout.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="{{ LANGUAGE_CODE }}">
     <head>
@@ -35,7 +37,7 @@
                 {% endblock %}
             </div>
             <div id="footer">
-                <h6 id="copyright"><a href="mailto:zuck@fastwebnet.it">Emanuele Bertoldi</a> &copy; {% now "Y" %}</h6>
+                <h6 id="copyright">&copy; {% now "Y" %} <a href="mailto:zuck@fastwebnet.it">Emanuele Bertoldi</a> {% trans 'unless otherwise noted' %}. {% blocktrans %}<em>Prometeo</em> is powered by <a href="http://www.djangoproject.com/">Django</a>{% endblocktrans %}.</h6>
             </div>
         </div>
     </body>
