- Added models "Address", "Telephone", "Role", "Job" to the "partners" package. - Improved the "Contact" model. - Added base implementation of "contacts" and "roles" management.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@150 71535020-02ba-11df-897e-95fb7fca2173

--- a/partners/templates/partners/contacts/add_job.html
+++ b/partners/templates/partners/contacts/add_job.html
@@ -5,6 +5,9 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Partners' '/partners/' %}
+    {% add_crumb 'Contacts' '/partners/contacts/' %}
+    {% add_crumb contact contact.get_absolute_url %}
+    {% add_crumb 'Jobs' contact.get_jobs_url %}
     {% add_crumb 'Add' %}
     <h2>{% render_breadcrumbs %}</h2>
 {% endblock %}
