--- a/partners/templates/partners/contacts/roles/add.html
+++ b/partners/templates/partners/contacts/roles/add.html
@@ -5,6 +5,8 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Partners' '/partners/' %}
+    {% add_crumb 'Contacts' '/partners/contacts/' %}
+    {% add_crumb 'Roles' '/partners/contacts/roles/' %}
     {% add_crumb 'Add' %}
     <h2>{% render_breadcrumbs %}</h2>
 {% endblock %}
