--- a/partners/templates/partners/add_contact.html
+++ b/partners/templates/partners/add_contact.html
@@ -5,6 +5,8 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Partners' '/partners/' %}
+    {% add_crumb partner partners.get_absolute_url %}
+    {% add_crumb 'Contacts' partner.get_contacts_url %}
     {% add_crumb 'Add' %}
     <h2>{% render_breadcrumbs %}</h2>
 {% endblock %}
