--- a/partners/templates/partners/contacts/delete.html
+++ b/partners/templates/partners/contacts/delete.html
@@ -5,7 +5,8 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Partners' '/partners/' %}
-    {% add_crumb partner %}
+    {% add_crumb 'Contacts' '/partners/contacts/' %}
+    {% add_crumb contact %}
     <h2>{% render_breadcrumbs %}</h2>
 {% endblock %}
 
@@ -13,7 +14,7 @@
     <h3>{% trans 'Delete' %}</h3>
     <form action="." method="post">
         <div class="message">
-            <p class="warning">{% trans 'Are you sure you want to delete this partner and all its related informations?' %}</p>
+            <p class="warning">{% trans 'Are you sure you want to delete this contact and all its related informations?' %}</p>
             <div class="actions">
                 <input class="ok" type="submit" name="yes" value="{% trans 'Yes' %}" />
                 <input class="cancel" type="submit" name="no" value="{% trans 'No' %}" />
@@ -21,7 +22,7 @@
         </div>
     </form>
     <ul class="actions">
-        <li><a class="view" href="{{ partner.get_absolute_url }}">{% trans 'View' %}</a></li>
-        <li><a class="edit" href="{{ partner.get_edit_url }}">{% trans 'Edit' %}</a></li>
+        <li><a class="view" href="{{ contact.get_absolute_url }}">{% trans 'View' %}</a></li>
+        <li><a class="edit" href="{{ contact.get_edit_url }}">{% trans 'Edit' %}</a></li>
     </ul>
 {% endblock %}
