--- a/partners/templates/partners/contacts/edit.html
+++ b/partners/templates/partners/contacts/edit.html
@@ -5,16 +5,21 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Partners' '/partners/' %}
-    {% add_crumb 'Add' %}
+    {% add_crumb 'Contacts' '/partners/contacts/' %}
+    {% add_crumb contact %}
     <h2>{% render_breadcrumbs %}</h2>
 {% endblock %}
 
 {% block content %}
-    <h3>{% trans 'Add' %}</h3>
+    <h3>{% trans 'Edit' %}</h3>
     <form action="." method="post">
         {{ form.as_p }}
         <div class="actions">
             <input class="save" type="submit" value="{% trans 'Save' %}" />
         </div>
     </form>
+    <ul class="actions">
+        <li><a class="view" href="{{ contact.get_absolute_url }}">{% trans 'View' %}</a></li>
+        <li><a class="delete" href="{{ contact.get_delete_url }}">{% trans 'Delete' %}</a></li>
+    </ul>
 {% endblock %}
