--- a/partners/templates/partners/edit.html
+++ b/partners/templates/partners/edit.html
@@ -1,9 +1,7 @@
-{% extends 'layout.html' %}
+{% extends 'partners/layout.html' %}
 
 {% load i18n %}
 {% load breadcrumbs %}
-
-{% block title %}{% trans 'Partners' %}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Partners' '/partners/' %}
@@ -13,15 +11,14 @@
 
 {% block content %}
     <h3>{% trans 'Edit' %}</h3>
-    <form action="/partners/edit/{{ partner.id }}/" method="post">
+    <form action="." method="post">
         {{ form.as_p }}
         <div class="actions">
             <input class="save" type="submit" value="{% trans 'Save' %}" />
         </div>
     </form>
     <ul class="actions">
-        <li><a class="view" href="/partners/view/{{ partner.id }}">{% trans 'View' %}</a></li>
-        <li><a class="delete" href="/partners/delete/{{ partner.id }}">{% trans 'Delete' %}</a></li>
-        <li><a class="people" href="/partners/">{% trans 'Partners' %}</a></li>
+        <li><a class="view" href="{{ partner.get_absolute_url }}">{% trans 'View' %}</a></li>
+        <li><a class="delete" href="{{ partner.get_delete_url }}">{% trans 'Delete' %}</a></li>
     </ul>
 {% endblock %}
