Fixed a few bugs in "partner_add_contact" view.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@159 71535020-02ba-11df-897e-95fb7fca2173

--- a/partners/templates/partners/add_contact.html
+++ b/partners/templates/partners/add_contact.html
@@ -5,7 +5,7 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Partners' '/partners/' %}
-    {% add_crumb partner partners.get_absolute_url %}
+    {% add_crumb partner partner.get_absolute_url %}
     {% add_crumb 'Contacts' partner.get_contacts_url %}
     {% add_crumb 'Add' %}
     <h2>{% render_breadcrumbs %}</h2>
