Added "prometeo.projects" to the list of available base modules.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@167 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -112,6 +112,7 @@ INSTALLED_APPS = (
 #    'prometeo.partners',
 #    'prometeo.products',
 #    'prometeo.warehouses',
+#    'prometeo.projects'
 )
 
 # Login options.
