Django 1.2.1 support started: updated core app.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@169 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/templates/accounts/login.html
+++ b/core/templates/accounts/login.html
@@ -19,6 +19,7 @@
 </div>
 {% endif %}
 <form method="post" action="/accounts/login/">
+    {% csrf_token %}
     <input type="hidden" name="next" value="{{ next }}" />
     
     {{ form.username.label_tag }}
