--- a/core/templates/accounts/groups/delete.html
+++ b/core/templates/accounts/groups/delete.html
@@ -13,6 +13,7 @@
 {% block content %}
     <h3>{% trans 'Delete' %}</h3>
     <form action="." method="post">
+        {% csrf_token %}
         <div class="message">
             <p class="warning">{% trans 'Are you sure you want to delete this group and all its related informations?' %}</p>
             <div class="actions">
