Django 1.2.1 support started: updated partners app.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@170 71535020-02ba-11df-897e-95fb7fca2173

--- a/partners/templates/partners/add.html
+++ b/partners/templates/partners/add.html
@@ -12,6 +12,7 @@
 {% block content %}
     <h3>{% trans 'Add' %}</h3>
     <form action="." method="post">
+        {% csrf_token %}
         {{ form.as_p }}
         <div class="actions">
             <input class="save" type="submit" value="{% trans 'Save' %}" />
