--- a/partners/templates/partners/contacts/delete_job.html
+++ b/partners/templates/partners/contacts/delete_job.html
@@ -15,6 +15,7 @@
 {% block content %}
     <h3>{% trans 'Delete' %}</h3>
     <form action="." method="post">
+        {% csrf_token %}
         <div class="message">
             <p class="warning">{% trans 'Are you sure you want to delete this job and all its related informations?' %}</p>
             <div class="actions">
