Django 1.2.1 support started: updated products app.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@171 71535020-02ba-11df-897e-95fb7fca2173

--- a/products/templates/products/add.html
+++ b/products/templates/products/add.html
@@ -13,6 +13,7 @@
     <h3>{% trans 'Add' %}</h3>
     <h4>{% blocktrans %}Step {{ step }} of {{ step_count }}{% endblocktrans %}</h4>
     <form action="." method="post">
+        {% csrf_token %}
         {% if is_formset %}
         {{ form.management_form }}
         {% for f in form.forms %}
