--- a/products/templates/products/uoms/categories/delete.html
+++ b/products/templates/products/uoms/categories/delete.html
@@ -14,6 +14,7 @@
 {% block content %}
     <h3>{% trans 'Delete' %}</h3>
     <form action="." method="post">
+        {% csrf_token %}
         <div class="message">
             <p class="warning">{% trans 'Are you sure you want to delete this category and all its related informations?' %}</p>
             <div class="actions">
