--- a/warehouses/templates/warehouses/movements/edit.html
+++ b/warehouses/templates/warehouses/movements/edit.html
@@ -15,6 +15,7 @@
     <h3>{% trans 'Edit' %}</h3>
     <h4>{% blocktrans %}Step {{ step }} of {{ step_count }}{% endblocktrans %}</h4>
     <form action="." method="post">
+        {% csrf_token %}
         {{ form.as_p }}
         <input type="hidden" name="{{ step_field }}" value="{{ step0 }}" />
         {{ previous_fields|safe }}
