--- a/projects/templates/projects/delete.html
+++ b/projects/templates/projects/delete.html
@@ -14,6 +14,7 @@
 {% block content %}
     <h3>{% trans 'Delete' %}</h3>
     <form action="/projects/delete/{{ project.id }}/" method="post">
+        {% csrf_token %}
         <div class="message">
             <p class="warning">{% trans 'Are you sure you want to delete this project and all its related informations?' %}</p>
             <div class="actions">
