--- a/media/css/default/style.css
+++ b/media/css/default/style.css
@@ -312,8 +312,8 @@ form .message {
 .error, .help, .ok, .cancel, .search, .settings, .start, .products, .movements,
 .people, .calendar, .documents, .passwords, .accounts, .partners, .uoms, .roles,
 .save, .load, .refresh, .yes, .no, .enter, .exit, .person, .jobs, .warehouses,
-.projects, .areas, .milestones, .tickets, .timelines, .suppliers, .telephones,
-.addresses {
+.projects, .areas, .milestones, .tickets, .timelines, .suppliers, .customers,
+.telephones, .addresses {
     padding: 5px 0 5px 25px;
     background-position: left center;
     background-repeat: no-repeat;
@@ -358,6 +358,7 @@ form .message {
 .tickets { background-image: url(images/ticket.png); }
 .timelines { background-image: url(images/timeline.png); }
 .suppliers { background-image: url(images/warehouse.png); }
+.customers { background-image: url(images/wallet.png); }
 .telephones { background-image: url(images/telephone.png); }
 .addresses { background-image: url(images/address.png); }
 .jobs { background-image: url(images/job.png); }
