--- a/core/templates/accounts/login.html
+++ b/core/templates/accounts/login.html
@@ -21,12 +21,7 @@
 <form method="post" action="/accounts/login/">
     {% csrf_token %}
     <input type="hidden" name="next" value="{{ next }}" />
-    
-    {{ form.username.label_tag }}
-    {{ form.username }}
-    {{ form.password.label_tag }}
-    {{ form.password }}
-
+    {{ form.as_p }}
     <div class="actions">
         <input type="submit" class="enter" value="{% trans 'Login' %}" />
     </div>
